# quixotic

./: .gitignore  Cargo.toml  LICENSE  README.md  linkmaze.service  test.txt
benches/: quixotic_benchmarks.rs
src/: lib.rs  markov.rs  rcdom.rs
