[package]
name = "quixotic"
version = "0.1.12"
edition = "2021"

[[bin]]
name = "linkmaze"
path = "src/bin/linkmaze.rs"

[[bin]]
name = "quixotic"
path = "src/bin/quixotic.rs"

[dependencies]
actix-web = "4.9"
clap = { version = "4.5", features = ["derive"] }
html5ever = "0.30"
markup5ever = "0.15"
rand = "0.9"
tendril = "0.4"
walkdir = "2.5"
